[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dilmun-memory"
version = "0.1.0"
description = "Ring-theoretic memory middleware for AI agents"
readme = "GEMINI.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dilmun Protocol", email = "dilmun@example.com"}
]
keywords = ["ai", "memory", "context", "ring-theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyright>=1.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dilmun*"]