[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dilmun"
version = "0.2.0"
description = "A deterministic, algebraically structured memory system for persistent AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Dilmun Protocol", email = "dilmun@example.com" }]
keywords = ["ai", "memory", "agents", "knowledge-graph", "deterministic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyright>=1.1"]
benchmark = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dilmun*"]
